# edma

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitignore copy  .prettierignore  .prettierrc.cjs  404.html  CODE_OF_CONDUCT.md  Cargo.toml  DEVLOG.md  LICENSE  README.md  WIKI.md  config-example.json  index.html  package-lock.json  package.json  print.html  searchindex.js  searchindex.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  formatter.yml  main.yml
db/: CARGO.md  Cargo.toml  README.md
db/src/: db.rs  lib.rs  main.rs
db/src/constant/: cf.rs  mod.rs
db/src/controller/: edge.rs  edge_property.rs  label.rs  mod.rs  node.rs  property.rs  relationship.rs  vertex.rs  vertex_property.rs
db/src/err/: mod.rs
db/src/interface/: kv.rs  misc.rs  mod.rs
db/src/mac/: adapter.rs  benchmark.rs  config.rs  controller.rs  mod.rs  repo.rs  repository.rs  test.rs  tx.rs
db/src/model/: adapter.rs  graph.rs  id.rs  ixs.rs  label.rs  mod.rs  node.rs  property.rs  relationship.rs  result.rs  tag.rs  transaction.rs  tx.rs  vertex.rs
db/src/model/graph/: account.rs  edge.rs  label.rs  mod.rs  property.rs  relationship.rs  vertex.rs
db/src/process/: collector.rs  endpoint.rs  exec.rs  mod.rs  terminator.rs
db/src/repo/: edge.rs  edge_property.rs  label.rs  mod.rs  property.rs  vertex.rs  vertex_property.rs
db/src/storage/: adapter.rs  ds.rs  kv.rs  mod.rs  rule.rs  tx.rs
db/src/storage/driver/: core.rs  mod.rs  rocksdb.rs
db/src/storage/kvs/: mod.rs
db/src/storage/kvs/cassandradb/: mod.rs  tx.rs  ty.rs
db/src/storage/kvs/redb/: mod.rs  tx.rs  ty.rs
db/src/storage/kvs/rocksdb/: cf.rs  mod.rs  tx.rs  ty.rs
db/src/storage/kvs/sled/: mod.rs  tx.rs  ty.rs
db/src/storage/kvstore/: mod.rs
db/src/storage/kvstore/rocksdb/: mod.rs  tx.rs  ty.rs
db/src/storage/rocksdb/: mod.rs  tx.rs  ty.rs
db/src/tests/: adapter_test.rs  database_test.rs  edge_test.rs  label_test.rs  mod.rs  property_test.rs  relationship_test.rs  repo_test.rs  tx_test.rs  vertex_test.rs
db/src/util/: benchmark.rs  builder.rs  byte.rs  err.rs  file.rs  mod.rs  num.rs  status.rs  step.rs  time.rs
devlog/2022/november/: w2.html  w3.html  w4.html  w5.html
devlog/2022/october/: w1.html
doc/: book.toml
doc/src/: SUMMARY.md  index.md
doc/src/devlog/: 01-11-2022.md  02-11-2022.md  04-11-2022.md  05-11-2022.md  26-10-2022.md  28-10-2022.md  DD-MM-YYYY.md
doc/src/devlog/2022/: november-2022.md  october-2022.md
doc/src/devlog/2022/november/: w2.md  w3.md  w4.md  w5.md
doc/src/devlog/2022/october/: w1.md
doc/src/misc/: code_of_conduct.md  contributors.md  license.md
docs/: NOTE.md  WIKI.md
gremlin/: CHANGELOG.md  Cargo.toml  README.md
gremlin/src/: conversion.rs  error.rs  lib.rs  utils.rs
gremlin/src/process/: mod.rs
gremlin/src/process/traversal/: anonymous_traversal_source.rs  builder.rs  bytecode.rs  graph_traversal.rs  graph_traversal_source.rs  internal.rs  mod.rs  order.rs  scope.rs
gremlin/src/process/traversal/step/: by.rs  choose.rs  coalesce.rs  dedup.rs  from.rs  has.rs  limit.rs  local.rs  loops.rs  match_step.rs  mod.rs  not.rs  or.rs  repeat.rs  select.rs  to.rs  until.rs  where_step.rs
gremlin/src/structure/: cardinality.rs  edge.rs  either.rs  gid.rs  label.rs  list.rs  macros.rs  map.rs  metrics.rs  mod.rs  p.rs  path.rs  pop.rs  property.rs  set.rs  t.rs  text_p.rs  token.rs  traverser.rs  value.rs  vertex.rs  vertex_property.rs
gui/: CARGO.md  CHANGELOG.md  Cargo.toml  config-example.json
gui/src/: app.rs  config.rs  main.rs  structure.rs
gui/src/components/: database.rs  editor.rs  explorer.rs  file.rs  home.rs  layout.rs  menu.rs  mod.rs  preview.rs  scroll_vertical.rs  status.rs
gui/src/components/database/: command.rs  container.rs  database_explorer.rs  database_selection.rs  editor.rs  explorer.rs  mod.rs  preview.rs  textarea.rs
gui/src/components/home/: container.rs
gui/src/components/layout/: container.rs  content.rs  editor.rs  explorer.rs  mod.rs
gui/src/components/template/: container.rs  mod.rs  template_explorer.rs
gui/src/constants/: focus.rs  mod.rs
gui/src/events/: event.rs  key.rs  mod.rs
gui/src/ui/: list.rs  mod.rs  scrollbar.rs  table.rs  tree.rs
gui/src/utils/: byte.rs  file.rs  mod.rs  tree.rs
mac/: Cargo.toml
mac/src/: lib.rs  value.rs
misc/: code_of_conduct.html  contributors.html  license.html
src/: App.tsx  AppProvider.tsx  index.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddNewDatabaseContainer.tsx  AnimatedComponent.tsx  LoadableContainer.tsx  SnackbarWrapper.tsx  WorkspaceContainer.tsx  WorkspaceHeader.tsx  WorkspaceListTab.tsx  WorkspaceStatusBar.tsx  index.ts
src/constants/: style.ts  theme.ts
src/constants/commands/: homebrew.ts
src/hooks/: index.ts  useBackendInvoker.ts  useWorkspaceAction.ts
src/stores/: index.ts  useDatabaseWorkspaceStore.ts  useSnackbarStore.ts
src/utils/: date.util.ts  drawer.util.ts  history.util.ts  index.ts  menu.util.ts  modal.util.ts  number.util.ts  object.util.ts  route.util.ts  string.util.ts  time.util.ts
tui/: CARGO.md  CHANGELOG.md  config-example.json
tui/src/: app.rs  cli.rs  config.rs
tui/src/components/: container.rs  menu.rs  mod.rs  traits.rs
tui/src/components/database/: container.rs  database_explorer.rs  mod.rs  preview.rs  status.rs
tui/src/components/template/: mod.rs  template_explorer.rs  template_layout.rs
tui/src/ui/: mod.rs
tui/src/utils/: byte.rs  file.rs
