[package]
name = "solomondb"
version = "0.1.0"
publish = true
edition = "2021"
readme = "CARGO.md"
keywords = [
 "database",
 "graph-database",
 "key-value",
 "key-value-store",
 "kv-store",
]
categories = ["database-implementations", "data-structures", "graph"]
description = "A scalable, distributed, collaborative graph database build by digital nomads"
homepage = "https://github.com/surrealdb/solomondb"
documentation = "https://docs.rs/solomondb/"
repository = "https://github.com/surrealdb/solomondb"
include = ["**/*.rs", "Cargo.toml"]
license = "Apache-2.0"


[features]
default = ["kv-rocksdb", "kv-cassandradb", "ql-gremlin", "debug-suite"]
kv-rocksdb = ["dep:rocksdb"]
kv-cassandradb = []
ql-gremlin = ["dep:gremlin"]
test-suite = []
debug-suite = []
http = ["dep:surf"]

[dependencies]
rocksdb = { version = "0.19.0", optional = true, features = [
 "multi-threaded-cf",
] }
chrono = "0.4.22"
thiserror = "1.0.37"
async-trait = "0.1.58"
futures = "0.3.25"
rand = "0.8.5"
uuid = { version = "1.2.1", features = ["v4"] }
serde_json = "1.0.87"
lazy_static = "1.4.0"
byteorder = "1.4.3"
phf = { version = "0.11", features = ["macros"] }
bincode = "1.3.3"
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4.17"
gremlin = { path = "../gremlin", version = "0.8.2", optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2.3.2", optional = true, default-features = false, features = [
 "encoding",
 "wasm-client",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2.3.2", optional = true, default-features = false, features = [
 "encoding",
 "curl-client",
] }

[lib]
name = "db"
