[package]
name = "edma_storage"
version = "0.0.1"
publish = true
edition = "2021"
readme = "CARGO.md"
keywords = [
 "database",
 "embedded-database",
 "graph-database",
 "key-value",
 "kv-store",
]
categories = ["database-implementations", "data-structures", "embedded"]
description = "EDMA: Embedded Database Management for All"
homepage = "https://github.com/nomadiz/edma"
documentation = "https://nomadiz.github.io/edma/"
repository = "https://github.com/nomadiz/edma"
include = ["**/*.rs", "Cargo.toml"]
license = "MIT"


[features]
default = ["kv-redb", "kv-rocksdb", "test-suite"]
kv-rocksdb = ["dep:rocksdb"]
kv-redb = ["dep:redb"]
test-suite = []
debug-suite = []

[dependencies]
redb = { version = "0.10.0", optional = true }
rocksdb = { version = "0.19.0", optional = true, features = [
 "multi-threaded-cf",
] }
chrono = "0.4.22"
thiserror = "1.0.37"
async-trait = "0.1.58"
futures = "0.3.25"
rand = "0.8.5"
serde_json = "1.0.87"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
path-absolutize = "3.0.14"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }


[lib]
name = "db"
