[package]
authors = ["Chase Chung <cqtin0903@gmail.com>"]
name = "solomon-gremlin"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0"
description = "A partially forked version of Gremlin-rs™"
repository = "https://github.com/wolf4ood/gremlin-rs"
keywords = ["database", "graphs", "tinkerpop", "gremlin-rs"]
categories = ["database"]
readme = "README.md"


[features]
default = []
test-suite = []
derive = ["gremlin-derive"]

[badges]
travis-ci = { repository = "wolf4ood/gremlin-rs" }
codecov = { repository = "wolf4ood/gremlin-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "wolf4ood/gremlin-rs" }
is-it-maintained-open-issues = { repository = "wolf4ood/gremlin-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.3.0"
async-tungstenite = { version = "0.18", optional = true, default-features = false }
async-std = { version = "1.4.0", optional = true, features = [
 "unstable",
 "attributes",
] }
async-trait = { version = "0.1.58" }
async-tls = { version = "0.11", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-stream = { version = "0.1.2", optional = true }
gremlin-derive = { path = "../mac", version = "0.1", optional = true }
rustls = { version = "0.19", features = [
 "dangerous_configuration",
], optional = true }
thiserror = "1.0.20"


url = { version = "2.1.0", optional = true }
futures = { version = "0.3.1", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }


[dependencies.uuid]
features = ["serde", "v4"]
version = "1.1.2"
