[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19" }
serde = { version = "1.0", features = ["derive"] }
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
thiserror = "1.0"
anyhow = "1.0.66"
tokio = { version = "1.11.0", features = ["full"] }
tui-tree-widget = "0.11.0"
edma_storage = { path = "../db", version = "*" }
path-absolutize = "3.0.14"
unicode-width = "0.1.10"
easy-cast = "0.5.1"
