[package]
name = "gremlin-derive"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description= "Proc macro for gremlin-rs™"
repository = "https://github.com/wolf4ood/gremlin-rs"
keywords = ["database", "graphs","tinkerpop"]
categories = ["database"]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.9" }
syn = { version = "1.0.16", features = [ "full" ] }
quote = { version = "1.0.2"}
