[package]
name = "edma-desktop"
version = "1.0.0"
description = "Desktop version of EDMA"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }


[dependencies]
tauri = { version = "1.4", features = [ "path-all", "shell-all", "macos-private-api", "dialog-all",
] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
regex = "1.9.5"
base64 = "0.21.4"
relative-path = "1.9.0"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
